Fix sonatype deployment.

--- a/src/main/resources/base/sonatype.gradle
+++ b/src/main/resources/base/sonatype.gradle
@@ -9,19 +9,29 @@ def nexus_pass     = 干.proj('nexus_pass', 'password for nexus/mavencentral (or
 def gpg_key        = 干.proj('gpg_key',        'gpg --export-secret-keys --armor <key-id>')
 def gpg_passphrase = 干.proj('gpg_passphrase', 'passphrase for unlocking gpg_key')
 
-apply plugin: 'signing'
-apply plugin: 'io.github.gradle-nexus.publish-plugin'
-
-signing {
-	useInMemoryPgpKeys(gpg_key, gpg_passphrase)
-	sign(publishing.publications)
+if (hasPlugin('maven-publish')) {
+	apply plugin: 'signing'
+	signing {
+		useInMemoryPgpKeys(gpg_key, gpg_passphrase)
+		sign(publishing.publications)
+	}
 }
 
-nexusPublishing {
-	repositories {
-		sonatype {
-			username = nexus_user
-			password = nexus_pass
+if (project.parent == null) {
+	// it's the root project
+	apply plugin: 'io.github.gradle-nexus.publish-plugin'
+	nexusPublishing {
+		repositories {
+			sonatype {
+				username = nexus_user
+				password = nexus_pass
+			}
+		}
+	}
+	def initTask = tasks.named('initializeSonatypeStagingRepository')
+	allprojects {
+		initTask.configure {
+			shouldRunAfter(tasks.withType(Sign))
 		}
 	}
 }
