--- a/src/main/resources/base/changelog.gradle
+++ b/src/main/resources/base/changelog.gradle
@@ -19,9 +19,9 @@ if (tasks.names.contains('changelogCheck')) {
 	}
 	// ensures that changelog bump and push only happens if the publish was successful
 	tasks.named('changelogBump').configure {
-		if (plugins.hasPlugin('java')) {
+		if (plugins.hasPlugin('maven-publish')) {
 			String pubName = plugins.hasPlugin('java-gradle-plugin') ? 'PluginMaven' : 'MavenJava'
-			dependsOn tasks.named("publish${pubName}PublicationToSonatypeRepository")
+			dependsOn "publish${pubName}PublicationToSonatypeRepository"
 			// only the root project has closeSonatypeStagingRepository, and it finalizes all publishToSonatype tasks
 			// https://github.com/gradle-nexus/publish-plugin
 			dependsOn rootProject.tasks.named('closeAndReleaseSonatypeStagingRepository')
@@ -44,14 +44,15 @@ if (tasks.names.contains('changelogCheck')) {
 			}
 		}
 	}
+	def childProject = project;
 	parent.tasks.named('changelogBump').configure {
-		if (plugins.hasPlugin('java')) {
-			String pubName = plugins.hasPlugin('java-gradle-plugin') ? 'PluginMaven' : 'MavenJava'
-			dependsOn tasks.named("publish${pubName}PublicationToSonatypeRepository")
+		if (childProject.plugins.hasPlugin('maven-publish')) {
+			String pubName = childProject.plugins.hasPlugin('java-gradle-plugin') ? 'PluginMaven' : 'MavenJava'
+			dependsOn childProject.tasks.named("publish${pubName}PublicationToSonatypeRepository")
 			dependsOn rootProject.tasks.named('closeAndReleaseSonatypeStagingRepository')
 		}
-		if (tasks.names.contains('publishPlugins')) {
-			dependsOn tasks.named('publishPlugins')
+		if (childProject.tasks.names.contains('publishPlugins')) {
+			dependsOn childProject.tasks.named('publishPlugins')
 		}
 	}
 }
