--- a/src/main/resources/base/changelog.gradle
+++ b/src/main/resources/base/changelog.gradle
@@ -18,7 +18,7 @@ if (tasks.names.contains('changelogCheck')) {
 		}
 		// ensures that changelog bump and push only happens if the publish was successful
 		tasks.named('changelogBump').configure {
-			if (plugins.hasPlugin('maven-publish')) {
+			if (plugins.hasPlugin('maven-publish') && project.findProperty('enable_publishing') == 'true') {
 				String pubName = plugins.hasPlugin('java-gradle-plugin') ? 'PluginMaven' : 'MavenJava'
 				dependsOn "publish${pubName}PublicationToSonatypeRepository"
 				// only the root project has closeSonatypeStagingRepository, and it finalizes all publishToSonatype tasks
@@ -45,7 +45,7 @@ if (tasks.names.contains('changelogCheck')) {
 			}
 		}
 		parent.tasks.named('changelogBump').configure {
-			if (childProject.plugins.hasPlugin('maven-publish')) {
+			if (childProject.plugins.hasPlugin('maven-publish') && project.findProperty('enable_publishing') == 'true') {
 				String pubName = childProject.plugins.hasPlugin('java-gradle-plugin') ? 'PluginMaven' : 'MavenJava'
 				dependsOn childProject.tasks.named("publish${pubName}PublicationToSonatypeRepository")
 				dependsOn rootProject.tasks.named('closeAndReleaseSonatypeStagingRepository')
