no more Gradle 7.0 warnings abour `generateMetadataFileForPluginMavenPublication` having undeclared dependencies.

--- a/src/main/resources/base/maven.gradle
+++ b/src/main/resources/base/maven.gradle
@@ -79,3 +79,10 @@ publishing.publications.register(isPlugin ? 'pluginMaven' : 'mavenJava', MavenPu
 		}
 	}
 })
+
+if (isPlugin) {
+	tasks.named('generateMetadataFileForPluginMavenPublication') {
+		dependsOn('publishPluginJar')
+		dependsOn('publishPluginJavaDocsJar')
+	}
+}
