--- a/src/main/resources/base/changelog.gradle
+++ b/src/main/resources/base/changelog.gradle
@@ -6,6 +6,17 @@
 // (if present) to depend on changelogCheck, so that a jar will never get published with a bad
 // changelog.  Lastly, changelogBump will depend on a successful closeAndReleaseSonatypeStagingRepository.
 
+def requireEnablePublishing(Task task) {
+	if (project.findProperty('enable_publishing') == 'true') {
+		return true
+	} else {
+		task.doFirst {
+			throw new Error("Cannot run " + task + " without specifying enable_publishing=true")
+		}
+		return false
+	}
+}
+
 if (tasks.names.contains('changelogCheck')) {
 	// set the project version for POM, jar manifest, etc.
 	version = spotlessChangelog.versionNext
@@ -18,16 +29,18 @@ if (tasks.names.contains('changelogCheck')) {
 		}
 		// ensures that changelog bump and push only happens if the publish was successful
 		tasks.named('changelogBump').configure {
-			if (plugins.hasPlugin('maven-publish') && project.findProperty('enable_publishing') == 'true') {
-				String pubName = plugins.hasPlugin('java-gradle-plugin') ? 'PluginMaven' : 'MavenJava'
-				dependsOn "publish${pubName}PublicationToSonatypeRepository"
-				// only the root project has closeSonatypeStagingRepository, and it finalizes all publishToSonatype tasks
-				// https://github.com/gradle-nexus/publish-plugin
-				dependsOn rootProject.tasks.named('closeAndReleaseSonatypeStagingRepository')
-			}
-			// if we have a gradle plugin, we need to push it up to the plugin portal too
-			if (tasks.names.contains('publishPlugins')) {
-				dependsOn tasks.named('publishPlugins')
+			if (requireEnablePublishing(it)) {
+				if (plugins.hasPlugin('maven-publish')) {
+					String pubName = plugins.hasPlugin('java-gradle-plugin') ? 'PluginMaven' : 'MavenJava'
+					dependsOn "publish${pubName}PublicationToSonatypeRepository"
+					// only the root project has closeSonatypeStagingRepository, and it finalizes all publishToSonatype tasks
+					// https://github.com/gradle-nexus/publish-plugin
+					dependsOn rootProject.tasks.named('closeAndReleaseSonatypeStagingRepository')
+				}
+				// if we have a gradle plugin, we need to push it up to the plugin portal too
+				if (tasks.names.contains('publishPlugins')) {
+					dependsOn tasks.named('publishPlugins')
+				}
 			}
 		}
 	}
@@ -45,13 +58,15 @@ if (tasks.names.contains('changelogCheck')) {
 			}
 		}
 		parent.tasks.named('changelogBump').configure {
-			if (childProject.plugins.hasPlugin('maven-publish') && project.findProperty('enable_publishing') == 'true') {
-				String pubName = childProject.plugins.hasPlugin('java-gradle-plugin') ? 'PluginMaven' : 'MavenJava'
-				dependsOn childProject.tasks.named("publish${pubName}PublicationToSonatypeRepository")
-				dependsOn rootProject.tasks.named('closeAndReleaseSonatypeStagingRepository')
-			}
-			if (childProject.tasks.names.contains('publishPlugins')) {
-				dependsOn childProject.tasks.named('publishPlugins')
+			if (requireEnablePublishing(it)) {
+				if (childProject.plugins.hasPlugin('maven-publish')) {
+					String pubName = childProject.plugins.hasPlugin('java-gradle-plugin') ? 'PluginMaven' : 'MavenJava'
+					dependsOn childProject.tasks.named("publish${pubName}PublicationToSonatypeRepository")
+					dependsOn rootProject.tasks.named('closeAndReleaseSonatypeStagingRepository')
+				}
+				if (childProject.tasks.names.contains('publishPlugins')) {
+					dependsOn childProject.tasks.named('publishPlugins')
+				}
 			}
 		}
 	}
