--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,8 +52,8 @@ jobs:
       - *restore_cache_deps
       - *set_git_origin_to_https
       - run:
-          name: changelogPush
-          command: ./gradlew changelogPush --stacktrace --warning-mode all
+          name: changelogPush -Penable_publishing=true
+          command: ./gradlew changelogPush -Penable_publishing=true --stacktrace --warning-mode all
 
 workflows:
   version: 2
