Builds that do not have Sonatype publish plugin applied now assume that they are publishing to GitLab.

--- a/src/main/resources/base/changelog.gradle
+++ b/src/main/resources/base/changelog.gradle
@@ -31,11 +31,15 @@ if (tasks.names.contains('changelogCheck')) {
 		tasks.named('changelogBump').configure {
 			if (requireEnablePublishing(it)) {
 				if (plugins.hasPlugin('maven-publish')) {
-					String pubName = plugins.hasPlugin('java-gradle-plugin') ? 'PluginMaven' : 'MavenJava'
-					dependsOn "publish${pubName}PublicationToSonatypeRepository"
-					// only the root project has closeSonatypeStagingRepository, and it finalizes all publishToSonatype tasks
-					// https://github.com/gradle-nexus/publish-plugin
-					dependsOn rootProject.tasks.named('closeAndReleaseSonatypeStagingRepository')
+					if (plugins.hasPlugin('io.github.gradle-nexus.publish-plugin')) {
+						String pubName = plugins.hasPlugin('java-gradle-plugin') ? 'PluginMaven' : 'MavenJava'
+						dependsOn "publish${pubName}PublicationToSonatypeRepository"
+						// only the root project has closeSonatypeStagingRepository, and it finalizes all publishToSonatype tasks
+						// https://github.com/gradle-nexus/publish-plugin
+						dependsOn rootProject.tasks.named('closeAndReleaseSonatypeStagingRepository')
+					} else {
+						dependsOn "publishAllPublicationsToGitLabRepository"
+					}
 				}
 				// if we have a gradle plugin, we need to push it up to the plugin portal too
 				if (tasks.names.contains('publishPlugins')) {
@@ -60,9 +64,13 @@ if (tasks.names.contains('changelogCheck')) {
 		parent.tasks.named('changelogBump').configure {
 			if (requireEnablePublishing(it)) {
 				if (childProject.plugins.hasPlugin('maven-publish')) {
-					String pubName = childProject.plugins.hasPlugin('java-gradle-plugin') ? 'PluginMaven' : 'MavenJava'
-					dependsOn childProject.tasks.named("publish${pubName}PublicationToSonatypeRepository")
-					dependsOn rootProject.tasks.named('closeAndReleaseSonatypeStagingRepository')
+					if (plugins.hasPlugin('io.github.gradle-nexus.publish-plugin')) {
+						String pubName = childProject.plugins.hasPlugin('java-gradle-plugin') ? 'PluginMaven' : 'MavenJava'
+						dependsOn childProject.tasks.named("publish${pubName}PublicationToSonatypeRepository")
+						dependsOn rootProject.tasks.named('closeAndReleaseSonatypeStagingRepository')
+					} else {
+						dependsOn childProject.tasks.named("publishAllPublicationsToGitLabRepository")
+					}
 				}
 				if (childProject.tasks.names.contains('publishPlugins')) {
 					dependsOn childProject.tasks.named('publishPlugins')
