--- a/src/main/resources/base/sonatype.gradle
+++ b/src/main/resources/base/sonatype.gradle
@@ -27,6 +27,8 @@ if (project.parent == null) {
 	nexusPublishing {
 		repositories {
 			sonatype {
+				nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
+				snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
 				username = nexus_user
 				password = nexus_pass
 			}
