Added `base/kotlin.gradle` and matching Spotless support.

--- a/src/main/resources/spotless/java.gradle
+++ b/src/main/resources/spotless/java.gradle
@@ -11,15 +11,21 @@ spotless {
 		clearSteps()
 		greclipse()
 	}
+	if (project == rootProject) {
+		groovyGradle {
+			target '*.gradle', 'buildSrc/*.gradle'
+		}
+	}
 	java {
 		licenseHeaderFile    干.file("spotless/license-${license}.java")
 		eclipse().configFile 干.file('spotless/format-eclipse.xml')
 		importOrder()
 		removeUnusedImports()
 	}
-	if (project == rootProject) {
-		groovyGradle {
-			target '*.gradle', 'buildSrc/*.gradle'
+	if (plugins.hasPlugin('org.jetbrains.kotlin.jvm')) {
+		kotlin {
+			ktfmt()
+			indentWithTabs(2)
 		}
 	}
 }
