--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ spotlessChangelog {
 	tagMessage '{{changes}}'
 }
 
+repositories {
+	mavenCentral()
+}
 apply from: 干.file('base/changelog.gradle')
 apply from: 干.file('spotless/freshmark.gradle')
 spotless {
