`base/kotlin` now specifies `freeCompilerArgs = ["-Xjvm-default=all"]` so that Kotlin interface method implementations can be used from Java.

--- a/src/main/resources/base/kotlin.gradle
+++ b/src/main/resources/base/kotlin.gradle
@@ -9,3 +9,9 @@ if (kotlin_jvmTarget != null) {
 		kotlinOptions.jvmTarget = kotlin_jvmTarget
 	}
 }
+compileKotlin {
+	kotlinOptions.freeCompilerArgs = ["-Xjvm-default=all"]
+}
+compileTestKotlin {
+	kotlinOptions.freeCompilerArgs = ["-Xjvm-default=all"]
+}
