--- a/src/main/resources/base/sonatype.gradle
+++ b/src/main/resources/base/sonatype.gradle
@@ -4,11 +4,12 @@ if (project.findProperty('enable_publishing') != 'true') {
 	return
 }
 
-def nexus_user     = 干.proj('nexus_user', 'username for nexus/mavencentral (or unset enable_publishing)')
-def nexus_pass     = 干.proj('nexus_pass', 'password for nexus/mavencentral (or unset enable_publishing)')
+def nexus_user     = 干.proj('nexus_user',     'username for nexus/mavencentral (or unset enable_publishing)')
+def nexus_pass64   = 干.proj('nexus_pass64', 'password for nexus/mavencentral (or unset enable_publishing)')
 def gpg_key64      = 干.proj('gpg_key64',      'gpg --export-secret-keys --armor <key-id>')
 def gpg_passphrase = 干.proj('gpg_passphrase', 'passphrase for unlocking gpg_key')
 
+def nexus_pass = new String(nexus_pass64.decodeBase64())
 def gpg_key = new String(gpg_key64.decodeBase64())
 if (plugins.hasPlugin('maven-publish')) {
 	apply plugin: 'signing'
