`spotlessChangelog { branch 'release' ...` because fine-grained tokens can't push to a protected `main`.

--- a/src/main/resources/base/changelog.gradle
+++ b/src/main/resources/base/changelog.gradle
@@ -18,6 +18,9 @@ def requireEnablePublishing(Task task) {
 }
 
 if (tasks.names.contains('changelogCheck')) {
+	spotlessChangelog {
+		branch 'release'
+	}
 	// set the project version for POM, jar manifest, etc.
 	version = spotlessChangelog.versionNext
 	// ensures that nothing will be built if changelogPush will end up failing
