`spotlessChangelog { appendDashSnapshotUnless_dashPrelease = true` because it's safer.

--- a/src/main/resources/base/changelog.gradle
+++ b/src/main/resources/base/changelog.gradle
@@ -20,6 +20,7 @@ def requireEnablePublishing(Task task) {
 if (tasks.names.contains('changelogCheck')) {
 	spotlessChangelog {
 		branch 'release'
+		appendDashSnapshotUnless_dashPrelease = true
 	}
 	// set the project version for POM, jar manifest, etc.
 	version = spotlessChangelog.versionNext
