Add matconsole as a license option.

--- a/src/main/resources/base/maven.properties
+++ b/src/main/resources/base/maven.properties
@@ -7,3 +7,6 @@ lgpl-2.1_comments=Viral copyleft license for dynamically-linked libraries
 confidential_name=Decompilation or disassembly prohibited
 confidential_url=Decompilation or disassembly prohibited
 confidential_comments=Decompilation or disassembly prohibited
+matconsolectl_name=New BSD License
+matconsolectl_url=https://github.com/diffplug/matconsolectl/blob/main/LICENSE
+matconsolectl_comments=Almost unlimited freedom as you include the BSD copyright and license notice
