--- a/src/main/resources/base/maven.gradle
+++ b/src/main/resources/base/maven.gradle
@@ -19,39 +19,43 @@ def license_name     = 干.prop('base/maven', "${license}_name")
 def license_url      = 干.prop('base/maven', "${license}_url")
 def license_comments = 干.prop('base/maven', "${license}_comments")
 
-java {
-	withJavadocJar()
-	withSourcesJar()
+boolean isKMP = project.pluginManager.hasPlugin('org.jetbrains.kotlin.multiplatform')
+if (!isKMP) {
+	java {
+		withJavadocJar()
+		withSourcesJar()
+	}
+
+	tasks.named('sourcesJar') {
+		dependsOn 'jar'
+	}
+
+	javadoc {
+		def makeLink = { url, text -> "<a href=\"${url}\" style=\"text-transform: none;\">${text}</a>" }
+		def javadocInfo = '<h2>' + makeLink("https://${git_url}", "${maven_artifact}:${version}") +
+				' by ' + makeLink('https://www.diffplug.com', 'DiffPlug') + '</h2>';
+		// Where it's possible to name parameters and methods clearly enough
+		// that javadoc is not necessary, why make the code bigger?
+		// Thus, no javadoc warnings.
+		options.addStringOption('Xdoclint:none', '-quiet')
+		// UTF-8!!!  Thanks to: https://github.com/freefair/gradle-plugins/blob/6d6f5ff6036e7da1c329075a02c6452c0bb669be/maven-plugin/src/main/java/io/freefair/gradle/plugins/maven/javadoc/JavadocUtf8Plugin.java
+		options.charSet('UTF-8');
+		options.docEncoding('UTF-8');
+		options.setEncoding('UTF-8');
+		// setup the header
+		options.header javadocInfo
+		options.footer javadocInfo
+		// setup links
+		options.links(javadocLinks)
+	}
+	apply from: 干.file('helper/javadoc-view.gradle')
 }
 
-tasks.named('sourcesJar') {
-	dependsOn 'jar'
-}
-
-javadoc {
-	def makeLink = { url, text -> "<a href=\"${url}\" style=\"text-transform: none;\">${text}</a>" }
-	def javadocInfo = '<h2>' + makeLink("https://${git_url}", "${maven_artifact}:${version}") +
-			' by ' + makeLink('https://www.diffplug.com', 'DiffPlug') + '</h2>';
-	// Where it's possible to name parameters and methods clearly enough
-	// that javadoc is not necessary, why make the code bigger?
-	// Thus, no javadoc warnings.
-	options.addStringOption('Xdoclint:none', '-quiet')
-	// UTF-8!!!  Thanks to: https://github.com/freefair/gradle-plugins/blob/6d6f5ff6036e7da1c329075a02c6452c0bb669be/maven-plugin/src/main/java/io/freefair/gradle/plugins/maven/javadoc/JavadocUtf8Plugin.java
-	options.charSet('UTF-8');
-	options.docEncoding('UTF-8');
-	options.setEncoding('UTF-8');
-	// setup the header
-	options.header javadocInfo
-	options.footer javadocInfo
-	// setup links
-	options.links(javadocLinks)
-}
-apply from: 干.file('helper/javadoc-view.gradle')
 
 boolean isPlugin = plugins.hasPlugin('java-gradle-plugin')
 publishing.publications.register(isPlugin ? 'pluginMaven' : 'mavenJava', MavenPublication, {
 	artifactId = maven_artifact
-	if (!isPlugin) {
+	if (!isPlugin && !isKMP) {
 		from components.java
 	}
 	pom {
