--- a/settings.gradle
+++ b/settings.gradle
@@ -2,8 +2,8 @@ pluginManagement {
 	plugins {
 		id 'com.diffplug.blowdryer' version '1.7.1'
 		id 'com.diffplug.blowdryerSetup' version '1.7.1'
-		id 'com.diffplug.spotless' version '6.12.0'
-		id 'com.diffplug.spotless-changelog' version '2.4.1'
+		id 'com.diffplug.spotless' version '7.0.0.BETA1'
+		id 'com.diffplug.spotless-changelog' version '3.1.2'
 	}
 }
 plugins {
