Add `tagMessage` and `runAfterPush 'gh release xxx'`.

--- a/src/main/resources/base/changelog.gradle
+++ b/src/main/resources/base/changelog.gradle
@@ -31,6 +31,8 @@ if (tasks.names.contains('changelogCheck')) {
 	spotlessChangelog {
 		branch 'release'
 		appendDashSnapshotUnless_dashPrelease = true
+		tagMessage '{{changes}}'
+		runAfterPush "gh release create release/{{version}} --title 'v{{version}}' --notes-from-tag"
 	}
 	// set the project version for POM, jar manifest, etc.
 	version = spotlessChangelog.versionNext
