--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ spotlessChangelog {
 	changelogFile 'README.md'
 	tagPrefix ''
 	tagMessage '{{changes}}'
+	runAfterPush "gh release create {{version}} --title '{{version}}' --notes-from-tag"
 }
 
 repositories {
