Another shot at fixing the signing keys.

--- a/src/main/resources/base/sonatype.gradle
+++ b/src/main/resources/base/sonatype.gradle
@@ -14,7 +14,7 @@ def gpg_key = new String(gpg_key64.decodeBase64())
 if (plugins.hasPlugin('maven-publish')) {
 	apply plugin: 'signing'
 	signing {
-		useInMemoryPgpKeys('2C7F998F4272C851', gpg_key, gpg_passphrase)
+		useInMemoryPgpKeys('0x4272C851', gpg_key, gpg_passphrase)
 		sign(publishing.publications)
 	}
 }
