Fix spotless deprecation warnings.

--- a/src/main/resources/spotless/java.gradle
+++ b/src/main/resources/spotless/java.gradle
@@ -27,7 +27,7 @@ spotless {
 	if (plugins.hasPlugin('org.jetbrains.kotlin.jvm')) {
 		kotlin {
 			ktfmt()
-			indentWithTabs(2)
+			leadingSpacesToTabs(2)
 		}
 	}
 }
