Fix assignment deprecation warnings in `javadoc-view`

--- a/src/main/resources/helper/javadoc-view.gradle
+++ b/src/main/resources/helper/javadoc-view.gradle
@@ -6,8 +6,8 @@ import com.diffplug.common.swt.os.OS
 
 // adds a javadocView task, which shows the javadoc
 tasks.register('javadocView') {
-	group JavaBasePlugin.DOCUMENTATION_GROUP;
-	description 'Views the Javadoc in a browser.'
+	group = JavaBasePlugin.DOCUMENTATION_GROUP;
+	description = 'Views the Javadoc in a browser.'
 	dependsOn tasks.named('javadoc')
 	doLast {
 		project.exec {
