--- a/src/main/resources/spotless/freshmark.gradle
+++ b/src/main/resources/spotless/freshmark.gradle
@@ -6,7 +6,7 @@ import com.diffplug.gradle.spotless.FreshMarkExtension
 
 Action<FreshMarkExtension> freshmarkSetup = {
 	it.target '*.md'
-	it.indentWithSpaces(2)
+	it.leadingTabsToSpaces(2)
 	it.trimTrailingWhitespace()
 	it.endWithNewline()
 }
