--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,7 @@ pluginManagement {
 	plugins {
 		id 'com.diffplug.blowdryer' version '1.7.1'
 		id 'com.diffplug.blowdryerSetup' version '1.7.1'
-		id 'com.diffplug.spotless' version '7.0.0.BETA1'
+		id 'com.diffplug.spotless' version '7.0.4'
 		id 'com.diffplug.spotless-changelog' version '3.1.2'
 	}
 }
