Add `-Xconsistent-data-class-copy-visibility` to the kotlin compile tasks.

--- a/src/main/resources/base/kotlin.gradle
+++ b/src/main/resources/base/kotlin.gradle
@@ -10,8 +10,14 @@ if (kotlin_jvmTarget != null) {
 	}
 }
 compileKotlin {
-	kotlinOptions.freeCompilerArgs = ["-Xjvm-default=all"]
+	kotlinOptions.freeCompilerArgs = [
+		"-Xjvm-default=all",
+		"-Xconsistent-data-class-copy-visibility"
+	]
 }
 compileTestKotlin {
-	kotlinOptions.freeCompilerArgs = ["-Xjvm-default=all"]
+	kotlinOptions.freeCompilerArgs = [
+		"-Xjvm-default=all",
+		"-Xconsistent-data-class-copy-visibility"
+	]
 }
