--- a/src/main/resources/base/sonatype.gradle
+++ b/src/main/resources/base/sonatype.gradle
@@ -28,8 +28,8 @@ if (project.parent == null) {
 	nexusPublishing {
 		repositories {
 			sonatype {
-				nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
-				snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+				nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
+				snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
 				username = nexus_user
 				password = nexus_pass
 			}
